--- a/cv.tex
+++ b/cv.tex
@@ -3,130 +3,154 @@
 \addbibresource{bibliography.bib}
 
 \begin{document}
-\header{adrien}{friggeri}
-       {social network analyst}
+\header{norman}{köhring}
+       {programming as art}
 
 
 % In the aside, each new line forces a line break
 \begin{aside}
   \section{about}
-    31 rue Smith
-    69002 Lyon
-    France
+    Fritz-Reuter-Straße 13
+    10827 Berlin
+    Germany
     ~
-    \href{mailto:adrien@friggeri.net}{adrien@friggeri.net}
-    \href{http://friggeri.net}{http://friggeri.net}
-    \href{http://facebook.com/adrien}{fb://adrien}
+    \href{mailto:jobs@koehr.in}{jobs@koehr.in}
+    \href{http://koehr.in}{http://koehr.in}
+    \href{http://twitter.com/nkoehring}{@nkoehring}
+    \href{https://www.xing.com/profiles/Norman_Koehring}{xing://norman\_koehring}
   \section{languages}
-    bilingual french/english
-    spanish \& italian notions
+    german \& fluent english
   \section{programming}
-    {\color{red} $\varheartsuit$} JavaScript
-    (ES5, node.js)
-    Python, C, OCaml
+    {\color{red} $\varheartsuit$} JavaScript \& Ruby
+    Python, C,
     CSS3 \& HTML5
 \end{aside}
 
 \section{interests}
 
-complex networks, social networks, community detection, community structure,
-overlapping communities, information diffusion, viral marketing, social
-inference, recommendation, data mining
-
-\section{education}
-
-\begin{entrylist}
-  \entry
-    {since 2009}
-    {Ph.D. {\normalfont candidate in Computer Science}}
-    {DNET/INRIA, LIP/ÉNS de Lyon}
-    {\emph{A Quantified Theory of Social Cohesion.}}
-  \entry
-    {2007–2008}
-    {M.Sc. magna cum laude}
-    {IXXI, École Normale Supérieure de Lyon}
-    {Majoring in Computer Science\\
-    Specialization in Complex Systems}
-  \entry
-    {2006–2007}
-    {B.Sc. magna cum laude}
-    {École Normale Supérieure de Lyon}
-    {Majoring in Computer Science}
-  \entry
-    {2003–2006}
-    {Classes Préparatoires aux Grandes Écoles}
-    {Lycée Fénelon, Lycée Louis le Grand, Paris}
-    {Preparation for national competitive entrance exams to leading French ``grandes écoles'', specializing in mathematics and physics.}
-  \entry
-    {2003}
-    {French Baccalauréat S. with honors}
-    {Lycée Louis le Grand, Paris}
-    {Specialization in mathematics and physics}
-\end{entrylist}
+intricacy, complexity, modern web, (social) networks\\
+create something new in (mobile) web development
 
 \section{experience}
+my professional career
 
 \begin{entrylist}
   \entry
-    {02–07 2009}
-    {LIP6/CNRS, Paris}
-    {Research Internship.}
-    {\emph{Visualization of complex networks.}}
+    {04/13–09/13}
+    {freelancing programmer}
+    {GIVE ME A HUG (Berlin, DE)}
+    {Front-/Backend development ~·~ Javascript (Backbone), HTML5, Ruby (RoR)}
   \entry
-    {06–08 2008}
-    {ISCPIF/CNRS, Paris}
-    {Research Internship.}
-    {\emph{Diffusion in the Blogosphere. Happy Flu.}}
+    {12/12–01/13}
+    {freelancing programmer}
+    {Wimdu (Berlin, DE)}
+    {Frontend development ~·~ Javascript (Backbone.JS), HTML5}
   \entry
-    {06–08 2007}
-    {LIP6/CNRS, Paris}
-    {Research Internship.}
-    {\emph{Kernels in real world networks.}}
+    {03/12–10/12}
+    {freelancing programmer}
+    {Telekom Innovation Laboratories (Berlin, DE)}
+    {Front-/Backend development ~·~ Javascript (Backbone), HTML5, Python}
   \entry
-    {07–08 2005}
-    {\href{http://www.kelkoo.com}{Kelkoo.com}}
-    {Summer job.}
-    {\emph{Creation of a keyword generator for Google Adwords.}}
+    {09/11–11/12}
+    {freelancing programmer}
+    {dMAS}
+    {Front-/Backend development ~·~ Javascript (AngularJS), Ruby (Padrino)}
   \entry
-    {07–08 2004}
-    {\href{http://www.monsieurprix.com}{MonsieurPrix.com}}
-    {Summer job.}
-    {\emph{Development of an e-commerce product indexation spider.}}
+    {10/10–09/11}
+    {freelancing programmer}
+    {kultig Werbeagentur (Wels, AU)}
+    {Front-/Backend development ~·~ Javascript (AngularJS), Ruby (Sinatra)}
+  \entry
+    {05/10–07/11}
+    {freelancing programmer}
+    {Lailos (Leipzig, DE)}
+    {wecuddle.de, Frontend development ~·~ Javascript, Ruby (RoR)}
+  \entry
+    {11/09–09/10}
+    {programmer (side job during university)}
+    {Gequma (Leipzig, DE)}
+    {Frontend development ~·~ Javascript, Ruby (RoR)}
+  \entry
+    {10/09–11/19}
+    {consultant / software development}
+    {Ars Avanti (Leipzig, DE)}
+    {Consulting ~·~ Webdevelopment, Databases}
+  \entry
+    {05/09–09/09}
+    {programer (trainee}
+    {IN AUDITO (Leipzig, DE)}
+    {Front-/Backend development ~·~ PHP (Symfony)}
+  \entry
+    {09/07–04/08}
+    {programmer (side job during university)}
+    {PINADS (Project of Chemnitz University Of Technology, DE)}
+    {Software development ~·~ Python, wxPython, XML}
 \end{entrylist}
+
 
 \section{applications}
+some of the webapplications whose development I participated
 
 \begin{entrylist}
   \entry
+    {2013}
+    {Coreon}
+    {\href{http://coreon.com}{coreon.com}}
+    {web based multilingual taxonomy editor}
+  \entry
+    {2013}
+    {Galileo Genial}
+    {\href{http://news.galileo-genial.de}{galileo-genial.de}}
+    {web based interactive learning game and platform for kids}
+  \entry
     {2012}
-    {Who did I forget ?}
-    {\href{http://whodidiforget.com}{whodidiforget.com}}
-    {Guest list recommendation for Facebook events based on friends already attending the event.}
-  \entry
-    {2011}
-    {Fellows}
-    {\href{http://fellows-exp.com}{fellows-exp.com}}
-    {Automatic community detection among Facebook Friends in order to validate the \emph{cohesion} measure, creation of friend lists.}
-  \entry
-    {2008}
-    {Happy Flu}
-    {\href{http://happyflu.com}{happyflu.com}}
-    {Experiment aimed to measure viral spreading of content across the blogosphere.}
+    {Wimdu}
+    {\href{http://wimdu.com}{wimdu.com}}
+    {travel page based on peer-to-peer property rental}
 \end{entrylist}
 
-\section{publications}
+
+%% \section{publications}
+%% 
+%% \printbibsection{article}{article in peer-reviewed journal}
+%% \begin{refsection}
+%%   \nocite{*}
+%%   \printbibliography[sorting=chronological, type=inproceedings, title={international peer-reviewed conferences/proceedings}, notkeyword={france}, heading=subbibliography]
+%% \end{refsection}
+%% \begin{refsection}
+%%   \nocite{*}
+%%   \printbibliography[sorting=chronological, type=inproceedings, title={local peer-reviewed conferences/proceedings}, keyword={france}, heading=subbibliography]
+%% \end{refsection}
+%% \printbibsection{misc}{other publications}
+%% \printbibsection{report}{research reports}
 
 
-\printbibsection{article}{article in peer-reviewed journal}
-\begin{refsection}
-  \nocite{*}
-  \printbibliography[sorting=chronological, type=inproceedings, title={international peer-reviewed conferences/proceedings}, notkeyword={france}, heading=subbibliography]
-\end{refsection}
-\begin{refsection}
-  \nocite{*}
-  \printbibliography[sorting=chronological, type=inproceedings, title={local peer-reviewed conferences/proceedings}, keyword={france}, heading=subbibliography]
-\end{refsection}
-\printbibsection{misc}{other publications}
-\printbibsection{report}{research reports}
+\pagebreak
+
+\section{education}
+my educational experience
+
+\begin{entrylist}
+  \entry
+    {2009–2011}
+    {Leipzig University Of Applied Sciences}
+    {Study B.Sc.}
+    {Studies of Computer Science}
+  \entry
+    {2006–2009}
+    {Merseburg University Of Applied Sciences}
+    {Study B.Sc.}
+    {Studies of Applied Computer Science}
+  \entry
+    {2004–2006}
+    {Lutherstadt Eisleben}
+    {Qualification}
+    {University Entrance Qualification}
+  \entry
+    {2001–2004}
+    {Gesellschaft für Mikroelektronik GmbH \& Co. KG}
+    {Apprenticeship}
+    {Specialised Computer Scientist / Software Development}
+\end{entrylist}
 
 \end{document}
