update, personal data

--- a/cv.tex
+++ b/cv.tex
@@ -10,16 +10,16 @@
 % In the aside, each new line forces a line break
 \begin{aside}
   \section{about}
-    Fritz-Reuter-Straße 13
-    10827 Berlin
+    Lüneburger Straße 13
+    10557 Berlin
     Germany
     ~
-    \href{mailto:jobs@koehr.in}{jobs@koehr.in}
-    \href{http://koehr.in}{http://koehr.in}
-    \href{http://twitter.com/nkoehring}{@nkoehring}
+    \href{mailto:norman.koehring@mailbox.org}{norman.koehring@mailbox.org}
+    \href{https://koehr.in}{https://koehr.in}
+    \href{https://twitter.com/koehr_in}{@koehr_in}
     \href{https://www.xing.com/profiles/Norman_Koehring}{xing://norman\_koehring}
   \section{languages}
-    german \& fluent english
+    fluent german \& english
   \section{programming}
     {\color{red} $\varheartsuit$} JavaScript \& Ruby
     Python, C,
@@ -29,7 +29,7 @@
 \section{interests}
 
 intricacy, complexity, modern web, (social) networks\\
-create something new in (mobile) web development
+to create something new
 
 \section{experience}
 my professional career
