new subheading font

--- a/cv.tex
+++ b/cv.tex
@@ -4,7 +4,7 @@
 
 \begin{document}
 \header{norman}{köhring}
-       {programming as art}
+       {Programming As Art}
 
 
 % In the aside, each new line forces a line break
@@ -14,10 +14,10 @@
     10557 Berlin
     Germany
     ~
-    \href{mailto:norman.koehring@mailbox.org}{norman.koehring@mailbox.org}
+    \href{mailto:koehr@mailbox.org}{koehr@mailbox.org}
     \href{https://koehr.in}{https://koehr.in}
-    \href{https://twitter.com/koehr_in}{@koehr_in}
-    \href{https://www.xing.com/profiles/Norman_Koehring}{xing://norman\_koehring}
+    \href{https://twitter.com/koehr\_in}{@koehr\_in}
+    \href{https://www.xing.com/profiles/Norman\_Koehring}{xing://norman\_koehring}
   \section{languages}
     fluent german \& english
   \section{programming}
