--- a/friggeri-cv.cls
+++ b/friggeri-cv.cls
@@ -52,6 +52,7 @@
 \newfontfamily{\bodyfont}{Iwona Medium}
 \newfontfamily{\thinfont}{Iwona Light}
 \newfontfamily{\headingfont}{Iwona Heavy}
+\newfontfamily{\subheadingfont}{Nanum Brush Script}
 
 %\newfontfamily{\bodyfont}{Helvetica Neue}
 %\newfontfamily{\thinfont}{Helvetica Neue UltraLight}
@@ -79,11 +80,11 @@
     \node [rectangle, fill=fillheader, anchor=north, minimum width=\paperwidth, minimum height=4cm] (box) at (current page.north){};
     \node [anchor=center] (name) at (box) {%
       \fontsize{40pt}{72pt}\color{header}%
-      {\thinfont #1}{\bodyfont  #2}
+      {\thinfont #1}{\bodyfont #2}
     };
     \node [anchor=north] at (name.south) {%
-      \fontsize{14pt}{24pt}\color{header}%
-      \thinfont #3%
+      \fontsize{18pt}{24pt}\color{header}%
+      \subheadingfont #3%
     };
   \end{tikzpicture}
   \vspace{2.5cm}
