updated cv (added nokia)

--- a/cv.tex
+++ b/cv.tex
@@ -36,6 +36,16 @@ my professional career
 
 \begin{entrylist}
   \entry
+    {03/14–today}
+    {frontend engineer}
+    {HERE (Berlin, DE)}
+    {Frontend development ~·~ Javascript (AngularJS), HTML5}
+  \entry
+    {11/13–02/14}
+    {freelancing programmer}
+    {Nokia gate5 (Berlin, DE)}
+    {Frontend development ~·~ Javascript (AngularJS), HTML5}
+  \entry
     {04/13–09/13}
     {freelancing programmer}
     {GIVE ME A HUG (Berlin, DE)}
@@ -89,9 +99,14 @@ my professional career
 
 
 \section{applications}
-some of the webapplications whose development I participated
+what I have worked on
 
 \begin{entrylist}
+  \entry
+    {2014}
+    {the new here.com}
+    {\href{https://beta.here.com}{beta.here.com}}
+    {personal maps, discovery and routing}
   \entry
     {2013}
     {Coreon}
