revamped cv with fontawesome

--- a/cv.tex
+++ b/cv.tex
@@ -1,6 +1,6 @@
 %!TEX TS-program = xelatex
 \documentclass[]{friggeri-cv}
-\addbibresource{bibliography.bib}
+%\addbibresource{bibliography.bib}
 
 \begin{document}
 \header{norman}{köhring}
@@ -10,14 +10,13 @@
 % In the aside, each new line forces a line break
 \begin{aside}
   \section{about}
-    Lüneburger Straße 13
     10557 Berlin
     Germany
     ~
-    \href{mailto:koehr@mailbox.org}{koehr@mailbox.org}
-    \href{https://koehr.in}{https://koehr.in}
-    \href{https://twitter.com/koehr\_in}{@koehr\_in}
-    \href{https://www.xing.com/profiles/Norman\_Koehring}{xing://norman\_koehring}
+    \href{mailto:n@koehr.in}{n@koehr.in}~\faEnvelope
+    \href{https://koehr.in}{https://koehr.in}~\faGlobe
+    \href{https://twitter.com/koehr\_in}{koehr\_in}~\faTwitter
+    \href{https://github.com/nkoehring}{nkoehring}~\faGithub
   \section{languages}
     fluent german \& english
   \section{programming}
@@ -43,7 +42,7 @@ my professional career
   \entry
     {11/13–02/14}
     {freelancing programmer}
-    {Nokia gate5 (Berlin, DE)}
+    {HERE (former Nokia gate5, Berlin, DE)}
     {Frontend development ~·~ Javascript (AngularJS), HTML5}
   \entry
     {04/13–09/13}
@@ -87,13 +86,13 @@ my professional career
     {Consulting ~·~ Webdevelopment, Databases}
   \entry
     {05/09–09/09}
-    {programer (trainee}
+    {programer (trainee)}
     {IN AUDITO (Leipzig, DE)}
     {Front-/Backend development ~·~ PHP (Symfony)}
   \entry
     {09/07–04/08}
     {programmer (side job during university)}
-    {PINADS (Project of Chemnitz University Of Technology, DE)}
+    {PINADS (Project of TU Chemnitz, DE)}
     {Software development ~·~ Python, wxPython, XML}
 \end{entrylist}
 
