playing with heading

--- a/friggeri-cv.cls
+++ b/friggeri-cv.cls
@@ -75,8 +75,9 @@
   \begin{tikzpicture}[remember picture,overlay]
     \node [rectangle, fill=fillheader, anchor=north, minimum width=\paperwidth, minimum height=4cm] (box) at (current page.north){};
     \node [anchor=center] (name) at (box) {%
-      \fontsize{40pt}{72pt}\color{header}%
-      {\thinfont #1}{\bodyfont #2}
+      \fontsize{40pt}{72pt}%
+      \color{lightgray}{\bodyfont #1}%
+      \color{header}{\bodyfont #2}
     };
     \node [anchor=north] at (name.south) {%
       \fontsize{18pt}{24pt}\color{header}%
