--- a/cv.tex
+++ b/cv.tex
@@ -4,7 +4,7 @@
 
 \begin{document}
 \header{norman}{köhring}
-       {Programming As Art}
+       {Code Artist}
 
 
 % In the aside, each new line forces a line break
