nicer way for writing the link section

--- a/cv.tex
+++ b/cv.tex
@@ -10,13 +10,12 @@
 % In the aside, each new line forces a line break
 \begin{aside}
   \section{about}
-    10557 Berlin
-    Germany
+    Berlin, Germany
     ~
-    \href{mailto:n@koehr.in}{n@koehr.in}~\faEnvelope
-    \href{https://koehr.in}{https://koehr.in}~\faGlobe
-    \href{https://twitter.com/koehr\_in}{koehr\_in}~\faTwitter
-    \href{https://github.com/nkoehring}{nkoehring}~\faGithub
+    \icon{email}{n@koehr.in}
+    \icon{homepage}{koehr.in}
+    \icon{twitter}{koehr\_in}
+    \icon{github}{nkoehring}
   \section{languages}
     fluent german \& english
   \section{programming}
