rewritten into achievment based format

--- a/cv.tex
+++ b/cv.tex
@@ -24,121 +24,69 @@
     CSS3 \& HTML5
 \end{aside}
 
-\section{interests}
-
-intricacy, complexity, modern web, (social) networks\\
-to create something new
 
 \section{experience}
-my professional career
+My professional achievements and experience
 
 \begin{entrylist}
   \entry
-    {03/14–today}
-    {frontend engineer}
-    {HERE (Berlin, DE)}
-    {Frontend development ~·~ Javascript (AngularJS), HTML5}
-  \entry
-    {11/13–02/14}
-    {freelancing programmer}
-    {HERE (former Nokia gate5, Berlin, DE)}
-    {Frontend development ~·~ Javascript (AngularJS), HTML5}
+    {11/13–today}
+    {developing the new \emph{HERE.com} routing and discovery web application}
+    {}
+    {Frontend development with Javascript (AngularJS), HTML5, CSS3\\
+     Backend development with Javascript (NodeJS / Express)}
+
   \entry
     {04/13–09/13}
-    {freelancing programmer}
-    {GIVE ME A HUG (Berlin, DE)}
-    {Front-/Backend development ~·~ Javascript (Backbone), HTML5, Ruby (RoR)}
+    {developed \emph{Coreon}, a web based multilingual taxonomy editor}
+    {}
+    {Frontend development with Javascript (Backbone), HTML5, SVG, CSS3\\
+     Backend development with Ruby (Ruby on Rails)}
+
   \entry
     {12/12–01/13}
-    {freelancing programmer}
-    {Wimdu (Berlin, DE)}
-    {Frontend development ~·~ Javascript (Backbone.JS), HTML5}
+    {developed \emph{Wimdu}s super quick live search suggestions}
+    {}
+    {Frontend development with Javascript (Backbone), HTML5, CSS3\\
+     Backend development with Ruby (Ruby on Rails) and ElasticSearch}
+
   \entry
     {03/12–10/12}
-    {freelancing programmer}
-    {Telekom Innovation Laboratories (Berlin, DE)}
-    {Front-/Backend development ~·~ Javascript (Backbone), HTML5, Python}
+    {developed an API and an experimental UI for \emph{Telekom Innovation Labs}}
+    {}
+    {Frontend development with Javascript (Backbone), HTML5, SVG, CSS3\\
+     Backend development with Python (Flask) and Redis}
+
   \entry
-    {09/11–11/12}
-    {freelancing programmer}
-    {dMAS}
-    {Front-/Backend development ~·~ Javascript (AngularJS), Ruby (Padrino)}
-  \entry
-    {10/10–09/11}
-    {freelancing programmer}
-    {kultig Werbeagentur (Wels, AU)}
-    {Front-/Backend development ~·~ Javascript (AngularJS), Ruby (Sinatra)}
+    {10/10–11/12}
+    {developed \emph{dMAS}, a web based trading request/proposal management system}
+    {}
+    {Frontend development with Javascript (AngularJS)\\
+     Backend development with Ruby (Sinatra/Padrino) and Redis}
+
   \entry
     {05/10–07/11}
-    {freelancing programmer}
-    {Lailos (Leipzig, DE)}
-    {wecuddle.de, Frontend development ~·~ Javascript, Ruby (RoR)}
+    {developed the web based flirt platform \emph{wecuddle}}
+    {}
+    {Frontend development with Javascript\\
+     Backend development with Ruby (Ruby on Rails)}
+
   \entry
     {11/09–09/10}
-    {programmer (side job during university)}
-    {Gequma (Leipzig, DE)}
-    {Frontend development ~·~ Javascript, Ruby (RoR)}
+    {developed a web based spreadsheet processing application for \emph{Gequma}}
+    {}
+    {Frontend development with Javascript\\
+     Backend development with Ruby (Ruby on Rails)}
+
   \entry
     {10/09–11/19}
-    {consultant / software development}
-    {Ars Avanti (Leipzig, DE)}
-    {Consulting ~·~ Webdevelopment, Databases}
-  \entry
-    {05/09–09/09}
-    {programer (trainee)}
-    {IN AUDITO (Leipzig, DE)}
-    {Front-/Backend development ~·~ PHP (Symfony)}
-  \entry
-    {09/07–04/08}
-    {programmer (side job during university)}
-    {PINADS (Project of TU Chemnitz, DE)}
-    {Software development ~·~ Python, wxPython, XML}
+    {advised in technical feasability questions for \emph{Ars Avanti}}
+    {}
+    {Consulting in feasability, web development, databases}
+
+
 \end{entrylist}
 
-
-\section{applications}
-what I have worked on
-
-\begin{entrylist}
-  \entry
-    {2014}
-    {the new here.com}
-    {\href{https://beta.here.com}{beta.here.com}}
-    {personal maps, discovery and routing}
-  \entry
-    {2013}
-    {Coreon}
-    {\href{http://coreon.com}{coreon.com}}
-    {web based multilingual taxonomy editor}
-  \entry
-    {2013}
-    {Galileo Genial}
-    {\href{http://news.galileo-genial.de}{galileo-genial.de}}
-    {web based interactive learning game and platform for kids}
-  \entry
-    {2012}
-    {Wimdu}
-    {\href{http://wimdu.com}{wimdu.com}}
-    {travel page based on peer-to-peer property rental}
-\end{entrylist}
-
-
-%% \section{publications}
-%% 
-%% \printbibsection{article}{article in peer-reviewed journal}
-%% \begin{refsection}
-%%   \nocite{*}
-%%   \printbibliography[sorting=chronological, type=inproceedings, title={international peer-reviewed conferences/proceedings}, notkeyword={france}, heading=subbibliography]
-%% \end{refsection}
-%% \begin{refsection}
-%%   \nocite{*}
-%%   \printbibliography[sorting=chronological, type=inproceedings, title={local peer-reviewed conferences/proceedings}, keyword={france}, heading=subbibliography]
-%% \end{refsection}
-%% \printbibsection{misc}{other publications}
-%% \printbibsection{report}{research reports}
-
-
-\pagebreak
 
 \section{education}
 my educational experience
@@ -165,5 +113,156 @@ my educational experience
     {Apprenticeship}
     {Specialised Computer Scientist / Software Development}
 \end{entrylist}
+
+
+\section{interests}
+
+intricacy, complexity, modern web, complex networks\\
+to create something new
+
+
+%\section{experience}
+%my professional career
+%
+%\begin{entrylist}
+%  \entry
+%    {03/14–today}
+%    {frontend engineer}
+%    {HERE (Berlin, DE)}
+%    {Frontend development ~·~ Javascript (AngularJS), HTML5}
+%  \entry
+%    {11/13–02/14}
+%    {freelancing programmer}
+%    {HERE (former Nokia gate5, Berlin, DE)}
+%    {Frontend development ~·~ Javascript (AngularJS), HTML5}
+%  \entry
+%    {04/13–09/13}
+%    {freelancing programmer}
+%    {GIVE ME A HUG (Berlin, DE)}
+%    {Front-/Backend development ~·~ Javascript (Backbone), HTML5, Ruby (RoR)}
+%  \entry
+%    {12/12–01/13}
+%    {freelancing programmer}
+%    {Wimdu (Berlin, DE)}
+%    {Frontend development ~·~ Javascript (Backbone.JS), HTML5}
+%  \entry
+%    {03/12–10/12}
+%    {freelancing programmer}
+%    {Telekom Innovation Laboratories (Berlin, DE)}
+%    {Front-/Backend development ~·~ Javascript (Backbone), HTML5, Python}
+%  \entry
+%    {09/11–11/12}
+%    {freelancing programmer}
+%    {dMAS}
+%    {Front-/Backend development ~·~ Javascript (AngularJS), Ruby (Padrino)}
+%  \entry
+%    {10/10–09/11}
+%    {freelancing programmer}
+%    {kultig Werbeagentur (Wels, AU)}
+%    {Front-/Backend development ~·~ Javascript (AngularJS), Ruby (Sinatra)}
+%  \entry
+%    {05/10–07/11}
+%    {freelancing programmer}
+%    {Lailos (Leipzig, DE)}
+%    {wecuddle.de, Frontend development ~·~ Javascript, Ruby (RoR)}
+%  \entry
+%    {11/09–09/10}
+%    {programmer (side job during university)}
+%    {Gequma (Leipzig, DE)}
+%    {Frontend development ~·~ Javascript, Ruby (RoR)}
+%  \entry
+%    {10/09–11/19}
+%    {consultant / software development}
+%    {Ars Avanti (Leipzig, DE)}
+%    {Consulting ~·~ Webdevelopment, Databases}
+%  \entry
+%    {05/09–09/09}
+%    {programer (trainee)}
+%    {IN AUDITO (Leipzig, DE)}
+%    {Front-/Backend development ~·~ PHP (Symfony)}
+%  \entry
+%    {09/07–04/08}
+%    {programmer (side job during university)}
+%    {PINADS (Project of TU Chemnitz, DE)}
+%    {Software development ~·~ Python, wxPython, XML}
+%\end{entrylist}
+%
+%
+%\section{applications}
+%what I have worked on
+%
+%\begin{entrylist}
+%  \entry
+%    {2014}
+%    {the new here.com}
+%    {\href{https://beta.here.com}{beta.here.com}}
+%    {personal maps, discovery and routing}
+%  \entry
+%    {2013}
+%    {Coreon}
+%    {\href{http://coreon.com}{coreon.com}}
+%    {web based multilingual taxonomy editor}
+%  \entry
+%    {2013}
+%    {Galileo Genial}
+%    {\href{http://news.galileo-genial.de}{galileo-genial.de}}
+%    {web based interactive learning game and platform for kids}
+%  \entry
+%    {2012}
+%    {Wimdu}
+%    {\href{http://wimdu.com}{wimdu.com}}
+%    {travel page based on peer-to-peer property rental}
+%\end{entrylist}
+%
+%
+%\section{interests}
+%
+%intricacy, complexity, modern web, (social) networks\\
+%to create something new
+%
+%
+%
+%%% \section{publications}
+%%% 
+%%% \printbibsection{article}{article in peer-reviewed journal}
+%%% \begin{refsection}
+%%%   \nocite{*}
+%%%   \printbibliography[sorting=chronological, type=inproceedings, title={international peer-reviewed conferences/proceedings}, notkeyword={france}, heading=subbibliography]
+%%% \end{refsection}
+%%% \begin{refsection}
+%%%   \nocite{*}
+%%%   \printbibliography[sorting=chronological, type=inproceedings, title={local peer-reviewed conferences/proceedings}, keyword={france}, heading=subbibliography]
+%%% \end{refsection}
+%%% \printbibsection{misc}{other publications}
+%%% \printbibsection{report}{research reports}
+%
+%
+%\pagebreak
+%
+%\section{education}
+%my educational experience
+%
+%\begin{entrylist}
+%  \entry
+%    {2009–2011}
+%    {Leipzig University Of Applied Sciences}
+%    {Study B.Sc.}
+%    {Studies of Computer Science}
+%  \entry
+%    {2006–2009}
+%    {Merseburg University Of Applied Sciences}
+%    {Study B.Sc.}
+%    {Studies of Applied Computer Science}
+%  \entry
+%    {2004–2006}
+%    {Lutherstadt Eisleben}
+%    {Qualification}
+%    {University Entrance Qualification}
+%  \entry
+%    {2001–2004}
+%    {Gesellschaft für Mikroelektronik GmbH \& Co. KG}
+%    {Apprenticeship}
+%    {Specialised Computer Scientist / Software Development}
+%\end{entrylist}
 
 \end{document}
