--- a/cv.tex
+++ b/cv.tex
@@ -88,6 +88,32 @@ My professional achievements and experience
 \end{entrylist}
 
 
+\section{coaching}
+Besides work, I love to help others to learn how to program
+
+\begin{entrylist}
+  \entry
+    {since 2012}
+    {RailsGirls Berlin}
+    {multiple times a year}
+    {Ruby on Rails for beginners}
+
+  \entry
+    {since 2013}
+    {JugendHackt}
+    {once a year}
+    {helping with different topics around hard- and software hacking for teenagers from 11-18}
+
+  \entry
+    {May 2014}
+    {HistoryCampus Berlin}
+    {once}
+    {helped with technical topics around webdevelopment}
+
+\end{entrylist}
+
+
+\pagebreak
 \section{education}
 my educational experience
 
@@ -115,154 +141,10 @@ my educational experience
 \end{entrylist}
 
 
-\section{interests}
-
-intricacy, complexity, modern web, complex networks\\
-to create something new
-
-
-%\section{experience}
-%my professional career
-%
-%\begin{entrylist}
-%  \entry
-%    {03/14–today}
-%    {frontend engineer}
-%    {HERE (Berlin, DE)}
-%    {Frontend development ~·~ Javascript (AngularJS), HTML5}
-%  \entry
-%    {11/13–02/14}
-%    {freelancing programmer}
-%    {HERE (former Nokia gate5, Berlin, DE)}
-%    {Frontend development ~·~ Javascript (AngularJS), HTML5}
-%  \entry
-%    {04/13–09/13}
-%    {freelancing programmer}
-%    {GIVE ME A HUG (Berlin, DE)}
-%    {Front-/Backend development ~·~ Javascript (Backbone), HTML5, Ruby (RoR)}
-%  \entry
-%    {12/12–01/13}
-%    {freelancing programmer}
-%    {Wimdu (Berlin, DE)}
-%    {Frontend development ~·~ Javascript (Backbone.JS), HTML5}
-%  \entry
-%    {03/12–10/12}
-%    {freelancing programmer}
-%    {Telekom Innovation Laboratories (Berlin, DE)}
-%    {Front-/Backend development ~·~ Javascript (Backbone), HTML5, Python}
-%  \entry
-%    {09/11–11/12}
-%    {freelancing programmer}
-%    {dMAS}
-%    {Front-/Backend development ~·~ Javascript (AngularJS), Ruby (Padrino)}
-%  \entry
-%    {10/10–09/11}
-%    {freelancing programmer}
-%    {kultig Werbeagentur (Wels, AU)}
-%    {Front-/Backend development ~·~ Javascript (AngularJS), Ruby (Sinatra)}
-%  \entry
-%    {05/10–07/11}
-%    {freelancing programmer}
-%    {Lailos (Leipzig, DE)}
-%    {wecuddle.de, Frontend development ~·~ Javascript, Ruby (RoR)}
-%  \entry
-%    {11/09–09/10}
-%    {programmer (side job during university)}
-%    {Gequma (Leipzig, DE)}
-%    {Frontend development ~·~ Javascript, Ruby (RoR)}
-%  \entry
-%    {10/09–11/19}
-%    {consultant / software development}
-%    {Ars Avanti (Leipzig, DE)}
-%    {Consulting ~·~ Webdevelopment, Databases}
-%  \entry
-%    {05/09–09/09}
-%    {programer (trainee)}
-%    {IN AUDITO (Leipzig, DE)}
-%    {Front-/Backend development ~·~ PHP (Symfony)}
-%  \entry
-%    {09/07–04/08}
-%    {programmer (side job during university)}
-%    {PINADS (Project of TU Chemnitz, DE)}
-%    {Software development ~·~ Python, wxPython, XML}
-%\end{entrylist}
-%
-%
-%\section{applications}
-%what I have worked on
-%
-%\begin{entrylist}
-%  \entry
-%    {2014}
-%    {the new here.com}
-%    {\href{https://beta.here.com}{beta.here.com}}
-%    {personal maps, discovery and routing}
-%  \entry
-%    {2013}
-%    {Coreon}
-%    {\href{http://coreon.com}{coreon.com}}
-%    {web based multilingual taxonomy editor}
-%  \entry
-%    {2013}
-%    {Galileo Genial}
-%    {\href{http://news.galileo-genial.de}{galileo-genial.de}}
-%    {web based interactive learning game and platform for kids}
-%  \entry
-%    {2012}
-%    {Wimdu}
-%    {\href{http://wimdu.com}{wimdu.com}}
-%    {travel page based on peer-to-peer property rental}
-%\end{entrylist}
-%
-%
 %\section{interests}
 %
-%intricacy, complexity, modern web, (social) networks\\
+%intricacy, complexity, modern web, complex networks\\
 %to create something new
-%
-%
-%
-%%% \section{publications}
-%%% 
-%%% \printbibsection{article}{article in peer-reviewed journal}
-%%% \begin{refsection}
-%%%   \nocite{*}
-%%%   \printbibliography[sorting=chronological, type=inproceedings, title={international peer-reviewed conferences/proceedings}, notkeyword={france}, heading=subbibliography]
-%%% \end{refsection}
-%%% \begin{refsection}
-%%%   \nocite{*}
-%%%   \printbibliography[sorting=chronological, type=inproceedings, title={local peer-reviewed conferences/proceedings}, keyword={france}, heading=subbibliography]
-%%% \end{refsection}
-%%% \printbibsection{misc}{other publications}
-%%% \printbibsection{report}{research reports}
-%
-%
-%\pagebreak
-%
-%\section{education}
-%my educational experience
-%
-%\begin{entrylist}
-%  \entry
-%    {2009–2011}
-%    {Leipzig University Of Applied Sciences}
-%    {Study B.Sc.}
-%    {Studies of Computer Science}
-%  \entry
-%    {2006–2009}
-%    {Merseburg University Of Applied Sciences}
-%    {Study B.Sc.}
-%    {Studies of Applied Computer Science}
-%  \entry
-%    {2004–2006}
-%    {Lutherstadt Eisleben}
-%    {Qualification}
-%    {University Entrance Qualification}
-%  \entry
-%    {2001–2004}
-%    {Gesellschaft für Mikroelektronik GmbH \& Co. KG}
-%    {Apprenticeship}
-%    {Specialised Computer Scientist / Software Development}
-%\end{entrylist}
+
 
 \end{document}
