update date format and jugendhackt entry

--- a/cv.tex
+++ b/cv.tex
@@ -30,56 +30,56 @@ My professional achievements and experience
 
 \begin{entrylist}
   \entry
-    {11/13–today}
+    {Nov13–today}
     {developing the new \emph{HERE.com} routing and discovery web application}
     {}
     {Frontend development with Javascript (AngularJS), HTML5, CSS3\\
      Backend development with Javascript (NodeJS / Express)}
 
   \entry
-    {04/13–09/13}
+    {Apr13–Sep13}
     {developed \emph{Coreon}, a web based multilingual taxonomy editor}
     {}
     {Frontend development with Javascript (Backbone), HTML5, SVG, CSS3\\
      Backend development with Ruby (Ruby on Rails)}
 
   \entry
-    {12/12–01/13}
+    {Dec12–Jan13}
     {developed \emph{Wimdu}s super quick live search suggestions}
     {}
     {Frontend development with Javascript (Backbone), HTML5, CSS3\\
      Backend development with Ruby (Ruby on Rails) and ElasticSearch}
 
   \entry
-    {03/12–10/12}
+    {Mar12–Oct12}
     {developed an API and an experimental UI for \emph{Telekom Innovation Labs}}
     {}
     {Frontend development with Javascript (Backbone), HTML5, SVG, CSS3\\
      Backend development with Python (Flask) and Redis}
 
   \entry
-    {10/10–11/12}
+    {Oct10–Nov12}
     {developed \emph{dMAS}, a web based trading request/proposal management system}
     {}
     {Frontend development with Javascript (AngularJS)\\
      Backend development with Ruby (Sinatra/Padrino) and Redis}
 
   \entry
-    {05/10–07/11}
+    {May10–Jul11}
     {developed the web based flirt platform \emph{wecuddle}}
     {}
     {Frontend development with Javascript\\
      Backend development with Ruby (Ruby on Rails)}
 
   \entry
-    {11/09–09/10}
+    {Nov09–Sep10}
     {developed a web based spreadsheet processing application for \emph{Gequma}}
     {}
     {Frontend development with Javascript\\
      Backend development with Ruby (Ruby on Rails)}
 
   \entry
-    {10/09–11/19}
+    {Oct09–Sep09}
     {advised in technical feasability questions for \emph{Ars Avanti}}
     {}
     {Consulting in feasability, web development, databases}
@@ -102,7 +102,7 @@ Besides work, I love to help others to learn how to program
     {since 2013}
     {JugendHackt}
     {once a year}
-    {helping with different topics around hard- and software hacking for teenagers from 11-18}
+    {helping with different topics around hard- and software hacking\\for teenagers from 12-18}
 
   \entry
     {May 2014}
