updated here.com entry

--- a/cv.tex
+++ b/cv.tex
@@ -30,8 +30,8 @@ My professional achievements and experience
 
 \begin{entrylist}
   \entry
-    {Nov13–today}
-    {developing the new \emph{HERE.com} routing and discovery web application}
+    {Nov13–May15~~}
+    {developed the new \emph{HERE.com} routing and discovery web application}
     {}
     {Frontend development with Javascript (AngularJS), HTML5, CSS3\\
      Backend development with Javascript (NodeJS / Express)}
