added blacklane and camunda

--- a/cv.tex
+++ b/cv.tex
@@ -30,6 +30,19 @@ My professional achievements and experience
 
 \begin{entrylist}
   \entry
+    {Sep15–today}
+    {developing bpmn.io, a BPMN rendering toolkit and interactive modeler}
+    {}
+    {Frontend development with Javascript (own framework), HTML5, CSS3}
+
+  \entry
+    {Jun15–Aug15}
+    {developed Blacklanes web-based booking system}
+    {}
+    {Frontend development with Javascript (AngularJS, jQuery), HTML5, CSS3\\
+     Backend development with Ruby (Ruby on Rails)}
+
+  \entry
     {Nov13–May15~~}
     {developed the new \emph{HERE.com} routing and discovery web application}
     {}
