--- a/cv.tex
+++ b/cv.tex
@@ -30,7 +30,7 @@ My professional achievements and experience
 
 \begin{entrylist}
   \entry
-    {Sep15–today}
+    {Sep15–Dec15}
     {developing bpmn.io, a BPMN rendering toolkit and interactive modeler}
     {}
     {Frontend development with Javascript (own framework), HTML5, CSS3}
