--- a/cv.tex
+++ b/cv.tex
@@ -30,6 +30,12 @@ My professional achievements and experience
 
 \begin{entrylist}
   \entry
+    {Feb16–May16}
+    {helping Zalando to create awesome web presentations for their campaigns}
+    {}
+    {Frontend development with Javascript (React), HTML5, CSS3}
+
+  \entry
     {Sep15–Dec15}
     {developing bpmn.io, a BPMN rendering toolkit and interactive modeler}
     {}
