updated CV, README and Fonts

--- a/src/cv.tex
+++ b/src/cv.tex
@@ -30,6 +30,13 @@ My professional achievements and experience
 
 \begin{entrylist}
   \entry
+    {Aug16–Sep17}
+    {developing the fromAtoB SPA from the ground up}
+    {}
+    {Frontend development with Javascript (Vue.js)\\
+     Backend development with Ruby, Go and Rust}
+
+  \entry
     {Feb16–May16}
     {helping Zalando to create awesome web presentations for their campaigns}
     {}
@@ -107,32 +114,38 @@ My professional achievements and experience
 \end{entrylist}
 
 
+\pagebreak
 \section{coaching}
 Besides work, I love to help others to learn how to program
 
 \begin{entrylist}
   \entry
+    {2016}
+    {Frauenloop}
+    {once a week}
+    {Programming and Web technologies mentoring for EU resident and immigrant women who want to enter technology sector careers.}
+
+  \entry
     {since 2012}
     {RailsGirls Berlin}
     {multiple times a year}
-    {Ruby on Rails for beginners}
+    {Mentoring Ruby on Rails for beginners, mainly women who want to enter the tech sector.}
 
   \entry
-    {since 2013}
+    {2013 to 2016}
     {JugendHackt}
     {once a year}
-    {helping with different topics around hard- and software hacking\\for teenagers from 12-18}
+    {A yearly hackathon for teenagers from 12-18, where I mentored different groups.}
 
   \entry
     {May 2014}
     {HistoryCampus Berlin}
     {once}
-    {helped with technical topics around webdevelopment}
+    {Helped with technical topics around web development.}
 
 \end{entrylist}
 
 
-\pagebreak
 \section{education}
 my educational experience
 
