--- a/src/cv.tex
+++ b/src/cv.tex
@@ -30,6 +30,13 @@ My professional achievements and experience
 
 \begin{entrylist}
   \entry
+    {Oct17–today}
+    {Helping to build the Hamburg Open Online University, hoou.de}
+    {}
+    {Frontend development with Javascript (Ember.js, Semantic UI)\\
+     Backend development with Ruby (Ruby on Rails)}
+
+  \entry
     {Aug16–Sep17}
     {developing the fromAtoB SPA from the ground up}
     {}
