--- a/src/cv.tex
+++ b/src/cv.tex
@@ -30,7 +30,7 @@ My professional achievements and experience
 
 \begin{entrylist}
   \entry
-    {Oct17–today}
+    {Oct17–Nov17}
     {Helping to build the Hamburg Open Online University, hoou.de}
     {}
     {Frontend development with Javascript (Ember.js, Semantic UI)\\
