--- a/src/cv.tex
+++ b/src/cv.tex
@@ -30,6 +30,14 @@ My professional achievements and experience
 
 \begin{entrylist}
   \entry
+    {Nov17–Mar18}
+    {Supporting the “Smart Office” project of HERE Global BV}
+    {}
+    {Frontend development with Javascript (Vue.js)\\
+     Backend development with Nodejs\\
+     IoT (BLE Sensors)}
+
+  \entry
     {Oct17–Nov17}
     {Helping to build the Hamburg Open Online University, hoou.de}
     {}
